--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-http://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp38-cp38-win_amd64.whl
+https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp38-cp38-linux_x86_64.whl
 pytorch-lightning==1.7.6
 torchmetrics==0.11.4
 Pillow
@@ -8,5 +8,7 @@ hydra_colorlog
 dvc
 dvc[gdrive]
 scipy
-fastapi
-uvicorn
+fastapi==0.100.0
+uvicorn==0.22.0
+python-multipart
+onnxruntime
